<resources>
    <string name="app_name">FlashbackMusic</string>
    <string name="title_songs">Songs</string>
    <string name="title_albums">Albums</string>
    <string name="title_flashback">Vibe Music</string>
    <string name="song_page_title">Songs</string>
    <string name="flashback_page_title">Vibe Mode</string>
    <string name="album_page_title">Albums</string>
    <string name="download_prompt">Input the URL of the song/album you want to download: </string>
    <string name="download">Download</string>
    <string name="cancel">Cancel</string>
    <string name="download_box_msg">Ex. last.fm/your_song.mp3</string>
    <string name="client_id">898035120337-jjnfd25j6cf237r5pm3vaao3dgrg1uq0.apps.googleusercontent.com</string>
    <string name="client_secret">ky_qpRl2lwqOSWfPD0Mzz7rU</string>
    <string name="redirect_url">https://cse110project-ff1b8.firebaseapp.com/__/auth/handler</string>
    <string name="sort_favorite">Sort by favorite</string>
    <string name="sort_album">Sort by album</string>
    <string name="sort_title">Sort by title</string>
    <string name="sort_artist">Sort by artist</string>
    <string name="set_time">Set</string>
    <string name="reset_time">Reset Time</string>
    <string name="time_prompt">Set your date and time below.</string>
</resources>
