...
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <Button
                        android:id="@+id/download_btn"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/ic_download"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <ImageButton android:id="@+id/sorting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:layout_gravity="right"
                        style="?android:attr/actionOverflowButtonStyle"/>
                </LinearLayout>
...
