<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/Music_URL"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:hint="@string/download_box_msg"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>